# ovos-skill-roon

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  __init__.py  const.py  discovery.py  flake.nix  library.py  manifest.yml  pyproject.toml  pyrightconfig.json  requirements.txt  roon.py  roon_types.py  search.py  settingsmeta.json  setup.py  skill.json  util.py
.github/workflows/: build.yaml
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  run.sh  supervisord.conf
docker-dev/: Dockerfile  docker-compose.yml  entrypoint.sh  run.sh  supervisord.conf
locale/en-us/: AtZone.regex  AuthorizationManualSuccess.dialog  AuthorizationRequired.dialog  AuthorizationWaiting.dialog  AvailableOutputs.dialog  AvailableZones.dialog  ConfigurationComplete.dialog  ConfigureRoon.intent  DecreaseVolume.intent  DefaultZone.dialog  DefaultZoneConfirm.dialog  Device.voc  IncreaseVolume.intent  ListeningTo.dialog  ListeningToAlbum.dialog  ListeningToArtist.dialog  Mute.intent  Next.intent  NoDefaultZone.dialog  NoOutputsAvailable.dialog  NoZonesAvailable.dialog  PlaybackFailed.dialog  Prev.intent  RepeatOff.intent  RepeatTrackOn.intent  Resume.intent  Roon.voc  RoonNotConfigured.dialog  RoonStatus.intent  Set.voc  SetVolumePercent.intent  ShuffleOff.intent  ShuffleOn.intent  Stop.intent  Track.voc  Unmute.intent  WhatIsPlayingReply-2.dialog  WhatIsPlayingReply.dialog  ZoneNotFound-named.dialog  ZoneNotFound.dialog  (+7 more)
roon_proxy/: __init__.py  const.py  roon_api_browse.py  roon_cache.py  roon_core.py  roon_discovery.py  roon_proxy_client.py  roon_proxy_client_async.py  roon_proxy_server.py  roon_types.py  schema.py  util.py
roon_skill/: __init__.py  types.py  util.py
roon_skill/locale/en-us/: AlreadyConfigured.dialog  AuthorizationManualStarting.dialog  ConfigureRoon.intent  DecreaseVolume.intent  Default.voc  DefaultZone.voc  DefaultZoneNotFound.dialog  DiscoveryFailed.dialog  GetDefaultZone.intent  GetZones.intent  IncreaseVolume.intent  InvalidRoonConfig.dialog  List.voc  ListeningToPlaylist.dialog  ListeningToStation.dialog  Mute.intent  Next.intent  NothingIsPlaying.dialog  OnRoon.regex  PairingInProgress.dialog  Pause.intent  PlayAlbum.intent  PlayTrack.intent  Prev.intent  RepeatTrackOn.intent  Resume.intent  RoonStatus.dialog  SetVolumePercent.intent  SetZone.rx  WhatIsPlaying.intent  Zone.voc  ZoneNotPlaying.dialog  album.voc  artist.voc  genre2.regex  output_name.entity  station.voc  track.regex  (+3 more)
roon_skill/ui/: AudioPlayer.qml
rpc/: __init__.py  app_msgs.py  client_async.py  client_sync.py  error.py  schema.py  server.py  test_client.py  test_server.py  util.py
test/intent/: what.devices.json
test/unit/: test_util.py
